--- a/coffee.html
+++ b/coffee.html
@@ -1285,6 +1285,27 @@
                     <td>X</td>
              </tr>
 
+             <tr>
+                    <td>Sat</td></td>                        
+                    <td>01st</td>
+                    <td>July</td>                                            
+                    <td>2023</td>
+                    <td>gourmet tart ~ Salthill {Cap} </td>
+                    <td>X</td>
+             </tr>
+
+
+            <tr>
+                    <td>Sun</td></td>                        
+                    <td>02nd</td>
+                    <td>July</td>                                            
+                    <td>2023</td>
+                    <td>gourmet tart ~ Claddagh {Cap}  </td>
+                    <td>X</td>
+             </tr>
+
+
+
 
 
 
