--- a/coffee.html
+++ b/coffee.html
@@ -1305,14 +1305,25 @@
              </tr>
 
 
+            <tr>
+                    <td>Mon</td></td>                        
+                    <td>03rd</td>
+                    <td>July</td>                                            
+                    <td>2023</td>
+                    <td>gourmet tart ~ Newcastle {Cap}  </td>
+                    <td>X</td>
+             </tr>
+
+             <tr>
+                    <td>Tue</td></td>                        
+                    <td>04th</td>
+                    <td>July</td>                                            
+                    <td>2023</td>
+                    <td>Smokey's ~ NUIG {Cap}  </td>
+                    <td>X</td>
+             </tr>
 
 
-
-
-
-
-
-           
 
 
      
@@ -1324,6 +1335,8 @@
             Places
         </h3>       
         <ul>
+            <li>Smokey's --> NUIG</li>
+            <li>Cloud cafe --> NUIG</li>
             <li>Costa --> Eyre Square</li>
             <li>Cafe Nero -->  Eyre Square </li>
             <li>The Ligthouse --> Abbeygate Street  </li>
