--- a/coffee.html
+++ b/coffee.html
@@ -1323,6 +1323,24 @@
                     <td>X</td>
              </tr>
 
+             <tr>
+                    <td>Wed</td></td>                        
+                    <td>05th</td>
+                    <td>July</td>                                            
+                    <td>2023</td>
+                    <td>gourmet tart ~ Newcastle {Cap} </td>
+                    <td>X</td>
+             </tr>
+
+            <tr>
+                    <td>Thu</td></td>                        
+                    <td>06th</td>
+                    <td>July</td>                                            
+                    <td>2023</td>
+                    <td>NUIG starbucks {Cap} </td>
+                    <td>Mocha Beans ~ Salthill {Cap}</td>
+             </tr>
+
 
 
 
