--- a/coffee.html
+++ b/coffee.html
@@ -1341,6 +1341,15 @@
                     <td>Mocha Beans ~ Salthill {Cap}</td>
              </tr>
 
+            <tr>
+                    <td>Fri</td></td>                        
+                    <td>07th</td>
+                    <td>July</td>                                            
+                    <td>2023</td>
+                    <td>Insomnia ~ E Square {Cap}</td>
+                    <td>X</td>
+             </tr>
+
 
 
 
