--- a/index.html
+++ b/index.html
@@ -273,8 +273,18 @@
                     <td>05 July 2023 </td>
                     <td>10% </td>
                     <td>12:30</td>
-                    <td>19:23 ~ 100% </td>
+                    <td>05 Jul ~ 19:23 ~ 100% </td>
                     <td>07 July</td>
+                    <td>!</td>       
+                 </tr>
+
+                <tr>
+                    <td>Fri</td>
+                    <td>07 July 2023 </td>
+                    <td>10% </td>
+                    <td>17:29</td>
+                    <td>8 Jul ~ 02:43 ~ 100% </td>
+                    <td>10 July</td>
                     <td>!</td>       
                  </tr>
                 
