--- a/index.html
+++ b/index.html
@@ -285,6 +285,16 @@
                     <td>17:29</td>
                     <td>8 Jul ~ 02:43 ~ 100% </td>
                     <td>10 July</td>
+                    <td>F</td>       
+                 </tr>
+
+                <tr>
+                    <td>Sun</td>
+                    <td>09 July 2023 </td>
+                    <td>2% </td>
+                    <td>20:24</td>
+                    <td>10 Jul ~ 01:45 ~ 100% </td>
+                    <td>11 July</td>
                     <td>!</td>       
                  </tr>
                 
