--- a/coffee.html
+++ b/coffee.html
@@ -1315,7 +1315,7 @@
              </tr>
 
              <tr>
-                    <td>Tue</td></td>                        
+                    <td>Tue</td>                        
                     <td>04th</td>
                     <td>July</td>                                            
                     <td>2023</td>
@@ -1324,7 +1324,7 @@
              </tr>
 
              <tr>
-                    <td>Wed</td></td>                        
+                    <td>Wed</td>                        
                     <td>05th</td>
                     <td>July</td>                                            
                     <td>2023</td>
@@ -1333,7 +1333,7 @@
              </tr>
 
             <tr>
-                    <td>Thu</td></td>                        
+                    <td>Thu</td>                        
                     <td>06th</td>
                     <td>July</td>                                            
                     <td>2023</td>
@@ -1342,11 +1342,38 @@
              </tr>
 
             <tr>
-                    <td>Fri</td></td>                        
+                    <td>Fri</td>                        
                     <td>07th</td>
                     <td>July</td>                                            
                     <td>2023</td>
                     <td>Insomnia ~ E Square {Cap}</td>
+                    <td>X</td>
+             </tr>
+
+            <tr>
+                    <td>Sat</td>                        
+                    <td>08th</td>
+                    <td>July</td>                                            
+                    <td>2023</td>
+                    <td>gourmet tart ~ Salthill {Cap} </td>
+                    <td>X</td>
+             </tr>
+
+             <tr>
+                    <td>Sun</td>                        
+                    <td>09th</td>
+                    <td>July</td>                                            
+                    <td>2023</td>
+                    <td>gourmet tart ~ Claddagh {Cap}  </td>
+                    <td>X</td>
+             </tr>
+
+            <tr>
+                    <td>Mon</td>                        
+                    <td>10th</td>
+                    <td>July</td>                                            
+                    <td>2023</td>
+                    <td>gourmet tart ~ Newcastle {Cap} </td>
                     <td>X</td>
              </tr>
 
