--- a/coffee.html
+++ b/coffee.html
@@ -1268,7 +1268,7 @@
              </tr>
 
                <tr>
-                    <td>Thu</td></td>                        
+                    <td>Thu</td>                        
                     <td>29th</td>
                     <td>June</td>                                            
                     <td>2023</td>
@@ -1277,7 +1277,7 @@
              </tr>
 
              <tr>
-                    <td>Fri</td></td>                        
+                    <td>Fri</td>                        
                     <td>30th</td>
                     <td>June</td>                                            
                     <td>2023</td>
@@ -1286,7 +1286,7 @@
              </tr>
 
              <tr>
-                    <td>Sat</td></td>                        
+                    <td>Sat</td>                        
                     <td>01st</td>
                     <td>July</td>                                            
                     <td>2023</td>
@@ -1296,7 +1296,7 @@
 
 
             <tr>
-                    <td>Sun</td></td>                        
+                    <td>Sun</td>                        
                     <td>02nd</td>
                     <td>July</td>                                            
                     <td>2023</td>
@@ -1306,7 +1306,7 @@
 
 
             <tr>
-                    <td>Mon</td></td>                        
+                    <td>Mon</td>                        
                     <td>03rd</td>
                     <td>July</td>                                            
                     <td>2023</td>
