--- a/coffee.html
+++ b/coffee.html
@@ -1377,6 +1377,25 @@
                     <td>X</td>
              </tr>
 
+            <tr>
+                    <td>Tue</td>                        
+                    <td>11th</td>
+                    <td>July</td>                                            
+                    <td>2023</td>
+                    <td>NUIG starbucks {Cap}  </td>
+                    <td>X</td>
+             </tr>
+
+            <tr>
+                    <td>Wed</td>                        
+                    <td>12th</td>
+                    <td>July</td>                                            
+                    <td>2023</td>
+                    <td>Wards {Cap}  </td>
+                    <td>X</td>
+             </tr>
+
+
 
 
 
