--- a/PC.html
+++ b/PC.html
@@ -81,7 +81,7 @@
         <hr>
 
         <ul>
-            <li>Coder Programmer software Developer Engineer</li>
+            <li>Coder Programmer Software Developer Engineer</li>
         </ul>
         
       
