--- a/PC.html
+++ b/PC.html
@@ -82,6 +82,7 @@
 
         <ul>
             <li>Coder Programmer Software Developer Engineer</li>
+            <li>Hacker Code breaker Cryptographer Cryptanalyst Social engineer </li>
         </ul>
         
       
