--- a/PC.html
+++ b/PC.html
@@ -81,6 +81,7 @@
         <hr>
 
         <ul>
+            <li>Investigator Researcher</li>
             <li>Coder Programmer Software Developer Engineer</li>
             <li>Hacker Code breaker Cryptographer Cryptanalyst Social engineer </li>
         </ul>
