--- a/coffee.html
+++ b/coffee.html
@@ -1395,6 +1395,25 @@
                     <td>X</td>
              </tr>
 
+             <tr>
+                    <td>Thu</td>                        
+                    <td>13th</td>
+                    <td>July</td>                                            
+                    <td>2023</td>
+                    <td>Smokies ~ NUIG {Cap}  </td>
+                    <td>X</td>
+             </tr>
+
+             <tr>
+                    <td>Fri</td>                        
+                    <td>14th</td>
+                    <td>July</td>                                            
+                    <td>2023</td>
+                    <td>gourmet tart ~ Salthill {Cap}  </td>
+                    <td>X</td>
+             </tr>
+
+
 
 
 
