--- a/coffee.html
+++ b/coffee.html
@@ -1413,6 +1413,55 @@
                     <td>X</td>
              </tr>
 
+            <tr>
+                    <td>Sat</td>                        
+                    <td>15th</td>
+                    <td>July</td>                                            
+                    <td>2023</td>
+                    <td>gourmet tart ~ Salthill {Cap}  </td>
+                    <td>X</td>
+             </tr>
+
+
+             <tr>
+                    <td>Sun</td>                        
+                    <td>16th</td>
+                    <td>July</td>                                            
+                    <td>2023</td>
+                   <td>gourmet tart ~ Claddagh {Cap}  </td>
+                    <td>X</td>
+             </tr>
+
+            <tr>
+                    <td>Sun</td>                        
+                    <td>16th</td>
+                    <td>July</td>                                            
+                    <td>2023</td>
+                   <td>gourmet tart ~ Claddagh {Cap}  </td>
+                    <td>X</td>
+             </tr>
+
+            <tr>
+                    <td>Mon</td>                        
+                    <td>17th</td>
+                    <td>July</td>                                            
+                    <td>2023</td>
+                    <td>gourmet tart ~ Newcastle {Cap} </td> 
+                    <td>X</td>
+             </tr>
+
+            <tr>
+                    <td>Tue</td>                        
+                    <td>18th</td>
+                    <td>July</td>                                            
+                    <td>2023</td>
+                    <td>Wards {Cap} </td> 
+                    <td>X</td>
+             </tr>
+
+
+
+
 
 
 
