--- a/coffee.html
+++ b/coffee.html
@@ -1459,6 +1459,46 @@
                     <td>X</td>
              </tr>
 
+            <tr>
+                    <td>Wed</td>                        
+                    <td>19th</td>
+                    <td>July</td>                                            
+                    <td>2023</td>
+                    <td>Wards {Cap} </td> 
+                    <td>X</td>
+             </tr>
+
+            <tr>
+                    <td>Thu</td>                        
+                    <td>20th</td>
+                    <td>July</td>                                            
+                    <td>2023</td>
+                    <td>Wards {Cap} </td> 
+                    <td>X</td>
+             </tr>
+
+            <tr>
+                    <td>Fri</td>                        
+                    <td>21sth</td>
+                    <td>July</td>                                            
+                    <td>2023</td>
+                    <td>Wards {Cap} </td> 
+                    <td>X</td>
+             </tr>
+
+            <tr>
+                    <td>Sat</td>                        
+                    <td>22nd</td>
+                    <td>July</td>                                            
+                    <td>2023</td>
+                    <td>Wards {Cap} </td> 
+                    <td>X</td>
+             </tr>
+
+
+
+
+
 
 
 
