--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
    
     <nav>
         <ul>
+            <li><a href="nc.html">New Batt</a></li>
             <li><a href="oldbat.html">Old Battery Page </a> </li>
             <li> <a href="coffee.html"> The Coffee Page </a> </li>
             <li><a href="PC.html">PC</a></li>
