--- a/nc.html
+++ b/nc.html
@@ -9,6 +9,375 @@
 </head>
 <body>
   <h1>New Coffee</h1>
+
+    <table border="2">
+          <thead>
+            <tr>
+              <th>Day</th>
+              <th>Date</th>
+              <th>Month</th>
+              <th>Year</th>
+              <th>Place</th>
+              <th>Others</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Friday</td>
+              <td>1st</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>Cafe Nero ~ E Sqaure</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Saturday</td>
+              <td>2nd</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>Insomnia ~ E Sqaure</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Sunday</td>
+              <td>3rd</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>Star Bucks ~ E Sqaure</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Monday</td>
+              <td>4th</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>Mr Waffle {Pan + mocha} ~ Newcatle</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Tuesday</td>
+              <td>5th</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td><div style="color: blue">O'Briens ~ Lisbon</div></td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Wednesday</td>
+              <td>6th</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>Moca Beans ~ Salthill</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Thursdday</td>
+              <td>7th</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>Gourmet Tart ~ Newcastle</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Friday</td>
+              <td>8th</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>Insomnia ~ E Sqaure</td>
+              <td>Star Bucks Ice Tea ~ E Sqaure</td>
+            </tr>
+
+            <tr>
+              <td>Saturday</td>
+              <td>9th</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>Gourmet Tart {Cap} ~ Salthill</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Sunday</td>
+              <td>10th</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>Costa {Mocha} ~ E Sqaure</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Monday</td>
+              <td>11th</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>White Moca Beans {Cap}</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Tuesday</td>
+              <td>12th</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td><div style="color: blue">Moca Beans {Cap} ~ Lisbon</div></td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Wednesday</td>
+              <td>13th</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>Moca Beans {Cap} ~ Salthill</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Thursday</td>
+              <td>14th</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>Stat Buks {Mocha} ~ Train Station</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Friday</td>
+              <td>15th</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>Cafe Nero {Cap} ~ E Sqaure</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>Saturday</td>
+              <td>16th</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>Insomnia {Cap} ~ E Sqaure</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Sunday</td>
+              <td>17th</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>Costa {Mocha} ~ E Sqaure</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Monday</td>
+              <td>18th</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>Moca Beans {Cap} ~ Salthill</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Tuesday</td>
+              <td>19th</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>
+                <div style="color: blue">O'Briens {Pan + Mocha} ~ Lisbon</div>
+              </td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Wednesday</td>
+              <td>20th</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>Gourmet Tart {Cap} ~ Newcastle <strong>?</strong></td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Thursday</td>
+              <td>21st</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>Black Moca Beans ~ Newcastle</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Friday</td>
+              <td>22nd</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>Gourmet Tart {Cap} ~ Salthill <strong>?</strong></td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Saturday</td>
+              <td>23rd</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>Moca Beans ~ Salthill</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Sunday</td>
+              <td>24th</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>Gourmet Tart {Cap} ~ Salthill</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Monday</td>
+              <td>25th</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>Gourmet Tart {Cap} ~ Newcastle</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Tuesday</td>
+              <td>26th</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>Urban Grind {Cap + scone}</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Wednday</td>
+              <td>27th</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>Cafe Nero {Mocha} ~ E Sqaure</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Thursday</td>
+              <td>28th</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>NUIG {Mocha} ~ BA</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Friday</td>
+              <td>29th</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>Gourmet Tart {Cap} ~ Salthill</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Saturday</td>
+              <td>30th</td>
+              <td>Sep</td>
+              <td>2023</td>
+              <td>Gourmet Tart {Cap} ~ Salthill</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Sunday</td>
+              <td>1st</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td>Gourmet Tart {Cap} ~ Claddagh</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Monday</td>
+              <td>2nd</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td>Gourmet Tart {Cap} ~ Newcastle</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Tuesday</td>
+              <td>3rd</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td>Moca Beans ~ Salthill</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Wednesday</td>
+              <td>4th</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td>
+                <div style="color: blue">O'Briens {Mocha} ~ Lisbon</div>
+              </td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Thursday</td>
+              <td>5th</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td>Black Moca Beans ~ Newcastle</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Friday</td>
+              <td>6th</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td>Gourmet Tart {Cap} ~ Salthill</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Saturday</td>
+              <td>7th</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td>Insomnia {Cap} ~ E Sqaure</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Sunday</td>
+              <td>8th</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td>Insomnia {Cap} ~ E Sqaure</td>
+              <td></td>
+            </tr>
+
+
+            <tr>
+              <td>Monday</td>
+              <td>9th</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td>Gourmet Tart {Cap} ~ Newcastle </td>
+              <td></td>
+            </tr>
+
+
+          </tbody>
+        </table>
   
     
   
