--- a/nc.html
+++ b/nc.html
@@ -8,6 +8,11 @@
     <title>Battery</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <li><a href="index.html">Home</a></li>
+        </nav>
+    </header>
   <h1>New Coffee</h1>
 
     <table border="2">
