--- a/nc.html
+++ b/nc.html
@@ -381,6 +381,15 @@
             </tr>
 
 
+           <tr>
+              <td>Tuesday</td>
+              <td>10th</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td><div style="color: blue">Moca Beans {Cap} ~ Lisbon</div></td>
+              <td></td>
+            </tr>
+
           </tbody>
         </table>
   
