--- a/nc.html
+++ b/nc.html
@@ -390,12 +390,160 @@
               <td></td>
             </tr>
 
+            <tr>
+              <td>Wednesday</td>
+              <td>11th</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td>Black Moca Beans ~ Newcastle</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Thursday</td>
+              <td>12th</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td>Black Moca Beans ~ Newcastle</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Friday</td>
+              <td>13th</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td>Cafe Nero ~ E Sqaure</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Saturday</td>
+              <td>14th</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td>Gourmet Tart {Cap} ~ Salthill</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Sunday</td>
+              <td>15th</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td>Gourmet Tart {Cap} ~ Francis street</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Monday</td>
+              <td>16th</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td>Gourmet Tart {Cap} ~ Newcastle</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Tuseday</td>
+              <td>17th</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td>
+                <div style="color: blue">O'Briens {Pan + Mocha} ~ Mervue</div>
+              </td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Wednesday</td>
+              <td>18th</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td>Moca Beans ~ Salthill</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Thursday</td>
+              <td>19th</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td>Gourmet Tart {Cap} ~ Salthill</td>
+              <td><div style="color: blue">Moca Beans {Cap} ~ Lisbon</div></td>
+            </tr>
+
+            <tr>
+              <td>Friday</td>
+              <td>20th</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td>Moca Beans ~ Salthill</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Saturday</td>
+              <td>21st</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td>Gourmet Tart {Cap} ~ Salthill</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Sunday</td>
+              <td>22nd</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td>Insomnia {Cap} ~ E Sqaure</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Mondy</td>
+              <td>23rd</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td>Merchant cafe ~ Forster Street</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Tuesday</td>
+              <td>24th</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td>Moca Beans ~ Salthill</td>
+              <td>Costa {Mocha} ~ E Sqaure</td>
+            </tr>
+
+            <tr>
+              <td>Wednesday</td>
+              <td>25th</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td>Black Moca Beans ~ Newcastle</td>
+              <td></td>
+            </tr>
+
+            <tr>
+              <td>Thursday</td>
+              <td>26th</td>
+              <td>Oct</td>
+              <td>2023</td>
+              <td>White Moca Beans ~ Newcastle</td>
+              <td></td>
+            </tr>
+
+
+
+              
+
           </tbody>
         </table>
   
     
-  
-  
   
 </body>
   
