--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
    
     <nav>
         <ul>
-            <li><a href="nc.html">New Batt</a></li>
+            <li><a href="nc.html">New Coffee</a></li>
             <li><a href="oldbat.html">Old Battery Page </a> </li>
-            <li> <a href="coffee.html"> The Coffee Page </a> </li>
+            <li> <a href="coffee.html"> The old Coffee Page </a> </li>
             <li><a href="PC.html">PC</a></li>
         </ul>
     </nav>
