--- a/nc.html
+++ b/nc.html
@@ -536,6 +536,105 @@
               <td></td>
             </tr>
 
+              <tr>
+          <td>Friday</td>
+          <td>27th</td>
+          <td>Oct</td>
+          <td>2023</td>
+          <td>Insomnia {Cap} ~ E Sqaure</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>Saturday</td>
+          <td>28th</td>
+          <td>Oct</td>
+          <td>2023</td>
+          <td>Gourmet Tart {Cap} ~ Salthill</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>Sunday</td>
+          <td>29th</td>
+          <td>Oct</td>
+          <td>2023</td>
+          <td>Star Bucks ~ E Sqaure</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>Monday</td>
+          <td>30th</td>
+          <td>Oct</td>
+          <td>2023</td>
+          <td>Cafe Nero ~ E Sqaure</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>Tuseday</td>
+          <td>31st</td>
+          <td>Oct</td>
+          <td>2023</td>
+          <td>Mr Waffle {Pan + mocha} ~ Newcatle</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>Wednesday</td>
+          <td>1st</td>
+          <td>Nov</td>
+          <td>2023</td>
+          <td>Moca Beans ~ Salthill</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>Thursday</td>
+          <td>2nd</td>
+          <td>Nov</td>
+          <td>2023</td>
+          <td>Gourmet Tart {Cap} ~ Salthill</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>Friday</td>
+          <td>3rd</td>
+          <td>Nov</td>
+          <td>2023</td>
+          <td>Gourmet Tart {Cap} ~ Salthill</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>Saturday</td>
+          <td>4th</td>
+          <td>Nov</td>
+          <td>2023</td>
+          <td>Moca Beans {Cap} ~ Salthill</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>Sunday</td>
+          <td>5th</td>
+          <td>Nov</td>
+          <td>2023</td>
+          <td>Star Bucks {Mocha} ~ E Sqaure</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>Monday</td>
+          <td>6th</td>
+          <td>Nov</td>
+          <td>2023</td>
+          <td>White Moca Beans {Cap + scone} ~ Newcastle</td>
+          <td></td>  
+        </tr>
+
 
 
               
