--- a/nc.html
+++ b/nc.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=q, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <title>Battery</title>
+    <title>New Coffee</title>
 </head>
 <body>
     <header>
@@ -633,6 +633,68 @@
           <td>2023</td>
           <td>White Moca Beans {Cap + scone} ~ Newcastle</td>
           <td></td>  
+        </tr>
+
+        <tr>
+          <td>Tuseday</td>
+          <td>7th</td>
+          <td>Nov</td>
+          <td>2023</td>
+          <td>Renzo {Cap + scone} ~ Eyre St</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>Wednesday</td>
+          <td>8th</td>
+          <td>Nov</td>
+          <td>2023</td>
+          <td>Gourmet Tart {Cap} ~ Salthill</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>Thursday</td>
+          <td>9th</td>
+          <td>Nov</td>
+          <td>2023</td>
+          <td>Little Lane {Cap} ~ Abbeygate Street</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td>Friday</td>
+          <td>10th</td>
+          <td>Nov</td>
+          <td>2023</td>
+          <td>Gourmet Tart {Cap} ~ Claddagh </td>
+          <td></td>
+        </tr>
+
+
+        <td>Saturday</td>
+          <td>11th</td>
+          <td>Nov</td>
+          <td>2023</td>
+          <td>Gourmet Tart {Cap} ~ Newcastle</td>
+          <td></td>
+        </tr>
+
+        <td>Sunday</td>
+          <td>12th</td>
+          <td>Nov</td>
+          <td>2023</td>
+          <td>Insomnia ~ E Sqaure</td>
+          <td></td>
+        </tr>
+
+
+        <td>Monday</td>
+          <td>13th</td>
+          <td>Nov</td>
+          <td>2023</td>
+          <td>Black Moca Beans ~ Newcastle</td>
+          <td></td>
         </tr>
 
 
