--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <li><a href="oldbat.html">Old Battery Page </a> </li>
             <li> <a href="coffee.html"> The old Coffee Page </a> </li>
             <li><a href="PC.html">PC</a></li>
+            <li><a href="old.html">Old Info</a></li>
+            
         </ul>
     </nav>
   
