--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="oldbat.html">Old Battery Page </a> </li>
             <li> <a href="coffee.html"> The old Coffee Page </a> </li>
             <li><a href="PC.html">PC</a></li>
-            <li><a href="old.html">Old Info</a></li>
+            <li><a href="pre.html">pre</a></li>
             
         </ul>
     </nav>
